<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>iqb.jps</groupId>
	<artifactId>jpsapp-parent</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>

	<name>JPSApp Project</name>
	<description>${jps.app.description}</description>
	<url>${project.url}</url>
	
	<properties>
		<jps.app.name>Jamn JPSApp</jps.app.name>
		<project.url>https://github.com/iqbserve/JamnJPSApp</project.url>
		<jps.app.description><![CDATA[Jamn Personal Server app project. The JPSApp is a Java-SE based, experimental scaffold for building individual All-in-One apps and tools using an also JSE based http capeable micro Server.]]></jps.app.description>
		<jps.app.version>${project.version}</jps.app.version>
		<jps.launcher.class>iqb.jps.boot.ApplicationLauncher</jps.launcher.class>
		<jps.app.class>iqb.jps.JPSApp</jps.app.class>
		<jps.executable.libs.dir>modules</jps.executable.libs.dir>
		<jps.executable.temp.dir.prefix>jpsapp-modules-</jps.executable.temp.dir.prefix>

		<author>Andreas Weidinger - IQB Services</author>
		<authorUrl>https://iqbserve.de/</authorUrl>

		<maven.build.timestamp.format>dd-MM-yyyy HH:mm:ss</maven.build.timestamp.format>
		<build.timestamp>${maven.build.timestamp}</build.timestamp>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- 
			Default assembly with JavaScript
			use: -Pnojs to build without JavaScript
			the <jps.javascript.enabled> property is also switched and exported to the application
		-->
		<assembly.descriptor>src/assembly/executable-js.xml</assembly.descriptor>
		<jps.javascript.enabled>true</jps.javascript.enabled>

		<!-- **/* to include all from /http-->
		<jps.web.resources>**/*</jps.web.resources>

		<java.version>25</java.version>

		<junit.jupiter.version>6.0.3</junit.jupiter.version>
		<maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>

		<maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
		<maven.jar.plugin.version>3.4.0</maven.jar.plugin.version>
		<maven.source.plugin.version>3.3.1</maven.source.plugin.version>
		<maven.dependency.plugin.version>3.6.0</maven.dependency.plugin.version>
		<maven.antrun.plugin.version>3.2.0</maven.antrun.plugin.version>
		<maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>

		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<profiles>
		<profile>
			<id>nojs</id>
			<properties>
				<assembly.descriptor>src/assembly/executable.xml</assembly.descriptor>
				<jps.javascript.enabled>false</jps.javascript.enabled>
			</properties>
		</profile>
	</profiles>

	<modules>
		<module>boot</module>
		<module>core</module>
		<module>jamn-server</module>
		<module>app</module>
	</modules>

</project>